--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ repository = "https://github.com/kznr02/ch32v103-hal"
 ch32v1 = { version = "0.1.6", features = ["critical-section", "ch32v103"] }
 embedded-hal = { version = "0.2.7", features = ["unproven"] }
 riscv = { version = "0.10.1" }
+paste = { version = "1.0.14" }
