--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = [
 license = "MIT"
 exclude = ["gitignore"]
 repository = "https://github.com/kznr02/ch32v103-hal"
-
+readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
